can add title and content. delete works. 2.5hrs.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    
+    <div id="postDiv">
+        <label for="postTitle">Post Title:</label>
+        <input id="postTitle"></input>
+        <span id="titleError"></span>
+        <label for="postContent">Your Thoughts:</label>
+        <textarea id="postContent"></textarea>
+        <span id="contentError"></span>
+        <button id="submitButton">Submit</button>
+        <span id="submitError"></span>
+    </div>
+    <section id="archiveDisplay">
+
+    </section>
 </body>
 </html>
