--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <div id="postDiv">
+    <form id="postForm" novalidate>
         <label for="postTitle">Post Title:</label>
-        <input id="postTitle"></input>
+        <input id="postTitle" required></input>
         <span id="titleError"></span>
         <label for="postContent">Your Thoughts:</label>
-        <textarea id="postContent"></textarea>
+        <textarea id="postContent" required></textarea>
         <span id="contentError"></span>
         <button id="submitButton">Submit</button>
         <span id="submitError"></span>
-    </div>
+    </form>
     <section id="archiveDisplay">
 
     </section>
