--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+    <main>
     <form id="postForm" novalidate>
-        <div>
+        <div class="form-group">
         <label for="postTitle">Post Title:</label>
         <input id="postTitle" required></input>
         <span id="titleError"></span>
         </div>
-        <div>
+        <div class="form-group">
         <label for="postContent">Your Thoughts:</label>
         <textarea id="postContent" required></textarea>
         <span id="contentError"></span>
         </div>
-        <div>
+        <div class="form-group">
         <button id="submitButton">Submit</button>
         <span id="submitError"></span>
         </div>
@@ -27,5 +28,6 @@
     <section id="archiveDisplay">
 
     </section>
+    <main>
 </body>
 </html>
