--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-        <main>
+    <main>
+        <h1>BOB LOBLAW'S LAW BLOG</h1>
         <form id="postForm" novalidate>
             <div class="form-group">
-            <label for="postTitle">Post Title:</label>
+            <label for="postTitle">post title:</label>
             <input id="postTitle" required></input>
             <span id="titleError"></span>
             </div>
             <div class="form-group">
-            <label for="postContent">Your Thoughts:</label>
+            <label for="postContent">your thoughts:</label>
             <textarea id="postContent" required></textarea>
             <span id="contentError"></span>
             </div>
             <div class="form-group">
-            <button id="submitButton">Submit</button>
+            <button id="submitButton">submit</button>
             <span id="submitError"></span>
             </div>
         </form>
+        <h2 id="pastPosts">past posts</h2>
         <section id="archiveDisplay">
-
         </section>
     <main>
 </body>
